--- a/index.html
+++ b/index.html
@@ -1,42 +1,49 @@
-<!- Displays a world map
-    This needs to be served via a local http server : accessing
-    data files will trop XSS protections in the browser otherwise
- ->
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
-
-
-
 <head>
-    <title>World map</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-Type" content="text/html; charset=utf-8">
+
+    <title>Breaking news</title>
+
+    <!- Bootstrap ->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <!- D3 ->
-        <script src='https://d3js.org/d3.v4.min.js' charset="utf-8"></script>
+    <script src='https://d3js.org/d3.v4.min.js' charset="utf-8"></script>
+
     <!- fancy projections -> 
-        <script src="https://d3js.org/d3-array.v1.min.js"></script>
-        <script src="https://d3js.org/d3-geo.v1.min.js"></script>
+    <script src="https://d3js.org/d3-array.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo.v1.min.js"></script>
+
     <!- Style ->
-        <link href="css/index.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 
 
 
-<body>
-    <h1>Some interactive text : <span id="interactiveSpan">1790</span></h1>
-    <div id="chronitonSlider"></div>
-    <svg id="worldmap">
-        <g id="countries"></g>
-    </svg>
+<body class="bg-light">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Breaking News</a>
+
+        <div class="collapse navbar-collapse">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Home</a>
+                <a class="nav-item nav-link active" href="#">Other</a>
+            </div>
+        </div>
+    </nav>
+
+    <svg class="container-fluid rounded my-5" xmlns="http://www.w3.org/2000/svg" id="mainSvg"></svg>
+
     <!- Main ->
-    <script src='scripts/worldmap.js'></script>
+    <script src='scripts/app.js'></script>
+
+
+
 </body>
-
-
 
 </html>
