WIP : data transition- old data is kinda removed by exit()

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!- fancy projections -> 
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
 
     <!- Style ->
     <link href="css/index.css" rel="stylesheet">
@@ -36,6 +37,8 @@
             </div>
         </div>
     </nav>
+    
+    <p id=changeDatasetButton>Clique, coquinou ;)</p>
 
     <svg class="container-fluid rounded my-5" xmlns="http://www.w3.org/2000/svg" id="mainSvg"></svg>
 
