--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
 
     <!- Style ->
     <link href="css/index.css" rel="stylesheet">
@@ -28,23 +29,103 @@
 <body class="bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
         <a class="navbar-brand" href="#">Breaking News</a>
 
-        <div class="collapse navbar-collapse">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home</a>
-                <a class="nav-item nav-link active" href="#">Other</a>
-            </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div id="navbarNavDropdown" class="navbar-collapse collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+
+            </ul>
+
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <button type="button" id="sidebarCollapse" class="navbar-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-align-justify"></i>
+                    </button>
+                </li>
+            </ul>
         </div>
     </nav>
 
-    <svg class="container-fluid rounded my-5" xmlns="http://www.w3.org/2000/svg" id="mainSvg"></svg>
+
+    <div class="wrapper">
+        <div id="content">
+            <div id="container-map">
+                <div class="container-fluid" >
+                    <svg xmlns="http://www.w3.org/2000/svg" id="mainSvg" viewBox="0 0 1100 600" preserveAspectRatio="xMinYMin meet"> <!-- class="svg-content"> -->
+                    </svg>
+                </div>
+            </div>
+        </div>
+
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>PlaceHolder Sources</h3>
+            </div>
+            <ul class="list-unstyled components">
+                <li class="active">
+                    <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a> -->
+                    <!-- <ul class="collapse list-unstyled" id="homeSubmenu"> -->
+                        <li>
+                            <div class="visualize-source">
+                                <svg class="bar-chart"></svg>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="visualize-source">
+                                <svg class="bar-chart"></svg>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="visualize-source">
+                                <svg class="bar-chart"></svg>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="visualize-source">
+                                <svg class="bar-chart"></svg>
+                            </div>
+                        </li>
+                    <!-- </ul> -->
+                </li>
+            </ul>
+        </nav>
+    </div>
 
     <!- Main ->
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <script src='scripts/app.js'></script>
 
-
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+                $(this).toggleClass('active');
+            });
+        });
+    </script>
 </body>
 
 </html>
