app.js : proper data update sequence for drawOverlay(), map countries scaling css/index.css : svg scales properly

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <div class="wrapper">
         <div id="content">
             <div id="container-map">
-                <div class="container-fluid" >
-                    <svg xmlns="http://www.w3.org/2000/svg" id="mainSvg" viewBox="0 0 1100 600" preserveAspectRatio="xMinYMin meet"> <!-- class="svg-content"> -->
+                <div class="container-fluid">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="mainSvg" height=85vh width=100% preserveAspectRatio="xMinYMin meet"> <!-- class="svg-content"> -->
                     </svg>
                 </div>
             </div>
