--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
     <!-- D3 -->
     <script src='https://d3js.org/d3.v4.min.js' charset="utf-8"></script>
-    <!-- fancy projections --> 
+    <!-- fancy projections -->
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <!-- Tooltips-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
@@ -69,7 +71,6 @@
             </ul>
         </div>
     </nav>
-
 
     <div class="wrapper">
         <div id="content">
