--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
                     </svg>
                 </div>
             </div>
+            <div class="container-play">
+              <div class="container-fluid">
+                <svg xmlns="http://www.w3.org/2000/svg" id="playSvg" height=10vh width=100% preserveAspectRatio="xMinYMin meet"> <!-- class="svg-content"> -->
+                </svg>
+
+                <button class="btn btn-warning">Play</button>
+
+              </div>
+            </div>
         </div>
 
         <nav id="sidebar">
