working slider and time-based data loading

--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
             </div>
             <div class="container-play">
               <div class="container-fluid">
+
+                <div id="play-clock">Test</div>
+
                 <svg xmlns="http://www.w3.org/2000/svg" id="playSvg" height=10vh width=100% preserveAspectRatio="xMinYMin meet"> <!-- class="svg-content"> -->
                 </svg>
 
-                <button class="btn btn-warning">Play</button>
+                <button class="btn btn-warning" id="play-btn">Play</button>
 
               </div>
             </div>
