adding history with timestamps

--- a/index.html
+++ b/index.html
@@ -109,30 +109,20 @@
             <div class="sidebar-header">
                 <h3>PlaceHolder Sources</h3>
             </div>
-            <ul class="list-unstyled components">
+            <ul class="list-unstyled components chart">
                 <li class="active">
                     <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a> -->
                     <!-- <ul class="collapse list-unstyled" id="homeSubmenu"> -->
-                        <li>
-                            <div class="visualize-source">
-                                <svg class="bar-chart"></svg>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="visualize-source">
-                                <svg class="bar-chart"></svg>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="visualize-source">
-                                <svg class="bar-chart"></svg>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="visualize-source">
-                                <svg class="bar-chart"></svg>
-                            </div>
-                        </li>
+                        <!-- <li> -->
+<!--                             <div class="visualize-source-container">
+                                <div class="visualize-source-mention-chart">
+                                    <svg class="bar-chart"></svg>
+                                </div>
+                                <div class="visualize-source-mention">
+                                    <p>ciao</p>
+                                </div>
+                            </div> -->
+                        <!-- </li> -->
                     <!-- </ul> -->
                 </li>
             </ul>
