cleaned TODO + band-select & heatmap demo

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                 <button class="btn btn-icon" id="btn-info"></button>
             </div>
             <div class="app-panel" id="sidebardiv">
+            </div>
+        </div>
 
     <!-- Handles the resizable 2-panel layout -->
     <script type="text/javascript">
