--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <!-- clone nodes -->
+    <script src="https://unpkg.com/d3-clone/build/d3-clone.min.js"></script>
     <!-- Tooltips-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
     <!-- Popper.JS -->
@@ -37,6 +39,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
+
+    <!-- NEED THIS SOMEWHERE <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
 </head>
 
 
@@ -50,25 +54,88 @@
             <div class="app-panel" id="mapdiv">
                 <!-- This will scale with the panel -->
                 <div  id="map-canva">
-                    <svg    xmlns="http://www.w3.org/2000/svg"
-                            id="mainSvg"
-                            viewBox="220 45 560 350"
-                            preserveAspectRatio="xMidYMid meet"
-                    >
-                        <g id="mapContent"></g>
-                    </svg>
+
+                  <svg    xmlns="http://www.w3.org/2000/svg"
+                          id="mainSvg"
+                          viewBox="220 20 560 350"
+                          preserveAspectRatio="xMidYMid meet">
+
+                      <g id="mapContent"></g>
+
+                      <svg id="digital-clock" width="100" height="40" viewBox="0 0 200 160">
+
+                        <rect id="clock-border" x="0" y="0" width="245" height="135" rx="10" ry="10"/>
+
+                        <text id="display-date" x="5" y="30"/>
+
+                        <g transform="translate(5, 35)">
+                          <g class="digit">
+                            <path d="M10,8L14,4L42,4L46,8L42,12L14,12L10,8z"/>
+                            <path d="M8,10L12,14L12,42L8,46L4,42L4,14L8,10z"/>
+                            <path d="M48,10L52,14L52,42L48,46L44,42L44,14L48,10z"/>
+                            <path d="M10,48L14,44L42,44L46,48L42,52L14,52L10,48z"/>
+                            <path d="M8,50L12,54L12,82L8,86L4,82L4,54L8,50z"/>
+                            <path d="M48,50L52,54L52,82L48,86L44,82L44,54L48,50z"/>
+                            <path d="M10,88L14,84L42,84L46,88L42,92L14,92L10,88z"/>
+                          </g>
+                          <g class="digit">
+                            <path d="M66,8L70,4L98,4L102,8L98,12L70,12L66,8z"/>
+                            <path d="M64,10L68,14L68,42L64,46L60,42L60,14L64,10z"/>
+                            <path d="M104,10L108,14L108,42L104,46L100,42L100,14L104,10z"/>
+                            <path d="M66,48L70,44L98,44L102,48L98,52L70,52L66,48z"/>
+                            <path d="M64,50L68,54L68,82L64,86L60,82L60,54L64,50z"/>
+                            <path d="M104,50L108,54L108,82L104,86L100,82L100,54L104,50z"/>
+                            <path d="M66,88L70,84L98,84L102,88L98,92L70,92L66,88z"/>
+                          </g>
+                          <g class="separator">
+                            <circle r="4" cx="115" cy="28"/>
+                            <circle r="4" cx="115" cy="68"/>
+                          </g>
+                          <g class="digit">
+                            <path d="M134,8L138,4L166,4L170,8L166,12L138,12L134,8z"/>
+                            <path d="M132,10L136,14L136,42L132,46L128,42L128,14L132,10z"/>
+                            <path d="M172,10L176,14L176,42L172,46L168,42L168,14L172,10z"/>
+                            <path d="M134,48L138,44L166,44L170,48L166,52L138,52L134,48z"/>
+                            <path d="M132,50L136,54L136,82L132,86L128,82L128,54L132,50z"/>
+                            <path d="M172,50L176,54L176,82L172,86L168,82L168,54L172,50z"/>
+                            <path d="M134,88L138,84L166,84L170,88L166,92L138,92L134,88z"/>
+                          </g>
+                          <g class="digit">
+                            <path d="M190,8L194,4L222,4L226,8L222,12L194,12L190,8z"/>
+                            <path d="M188,10L192,14L192,42L188,46L184,42L184,14L188,10z"/>
+                            <path d="M228,10L232,14L232,42L228,46L224,42L224,14L228,10z"/>
+                            <path d="M190,48L194,44L222,44L226,48L222,52L194,52L190,48z"/>
+                            <path d="M188,50L192,54L192,82L188,86L184,82L184,54L188,50z"/>
+                            <path d="M228,50L232,54L232,82L228,86L224,82L224,54L228,50z"/>
+                            <path d="M190,88L194,84L222,84L226,88L222,92L194,92L190,88z"/>
+                          </g>
+                        </g>
+                      </svg>
+
+                      <svg id="selection-menu" width="150" height="20" viewBox="0 0 210 40">
+
+                        <image id="categories-btn" x="5" y="15" width="20" height="20" xlink:href="../css/icons/categories.svg" />
+                        <text id="categories-txt" x="30" y="30">Event Categories</text>
+
+                      </svg>
+
+
+                      <svg id="control-menu" width="100" height="20" viewBox="0 0 140 40">
+
+                          <rect id="control-menu-border" x="5" y="15" width="90" height="20" rx="5" ry="5"/>
+
+                          <image id="backward-btn" x="10" y="15" width="20" height="20" xlink:href="../css/icons/backward.svg" />
+                          <image id="play-btn" x="43" y="17.5" width="15" height="15" xlink:href="../css/icons/play.svg" />
+                          <image id="forward-btn" x="70" y="15" width="20" height="20" xlink:href="../css/icons/forward.svg" />
+
+                          <text id="simulation-speed" x="43" y="10"></text>
+
+                      </svg>
+
+                  </svg>
+
                 </div>
-                <!-- This should not -->
-                <div class="one-line-menu" id="map-controls">
-                    <button class="btn btn-icon" id="btn-reset"></button>
-                    <button class="btn btn-icon" id="btn-play"></button>
-                    <svg    xmlns="http://www.w3.org/2000/svg"
-                            preserveAspectRatio="xMidYMid meet"
-                            id="svg-timeslider"
-                    >
-                    </svg>
-                    <button class="btn btn-icon" id="btn-collapse-settings"></button>
-                </div>
+
             </div>
 
             <div class="app-panel" id="settingsdiv">
@@ -102,18 +169,6 @@
         });
     </script>
 
-    <!-- Handles the collapse-settings button -->
-    <script type="text/javascript">
-        document.querySelector("#btn-collapse-settings").addEventListener("click", () => {
-            const settingsdiv = document.querySelector("#settingsdiv")
-            const display = settingsdiv.style.display
-            if (display === "none") {
-                settingsdiv.style.display = "block"
-            } else { // NB : at the very first click, the field is empty
-                settingsdiv.style.display = "none"
-            }
-        })
-    </script>
 
     <!-- Main -->
     <script type='module' src='scripts/app.js'></script>
