--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <!-- clone nodes -->
-    <script src="https://unpkg.com/d3-clone/build/d3-clone.min.js"></script>
+    <!-- <script src="scripts/libs/d3-clone.min.js"></script> -->
     <!-- Tooltips-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
     <!-- Popper.JS -->
