--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 
 
     <!-- D3 -->
-    <script src='https://d3js.org/d3.v4.min.js' charset="utf-8"></script>
+    <script src='scripts/libs/d3.v4.min.js' charset="utf-8"></script>
     <!-- fancy projections -->
-    <script src="https://d3js.org/d3-array.v1.min.js"></script>
-    <script src="https://d3js.org/d3-geo.v1.min.js"></script>
-    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <script src="scripts/libs/d3-array.v1.min.js"></script>
+    <script src="scripts/libs/d3-geo.v1.min.js"></script>
+    <script src="scripts/libs/d3-geo-projection.v2.min.js"></script>
     <!-- chromo scales -->
-    <script src="https://d3js.org/d3-color.v1.min.js"></script>
-    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="scripts/libs/d3-color.v1.min.js"></script>
+    <script src="scripts/libs/d3-interpolate.v1.min.js"></script>
+    <script src="scripts/libs/d3-scale-chromatic.v1.min.js"></script>
     <!-- clone nodes -->
     <!-- <script src="scripts/libs/d3-clone.min.js"></script> -->
     <!-- Tooltips-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
+    <script src="scripts/libs/d3-tip.0.09.1.min.js"></script>
     <!-- Popper.JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="/scripts/libs/popper.1.14.0.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- 2-panel layout : JQuery lib & resizable plugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://rawgit.com/RickStrahl/jquery-resizable/master/src/jquery-resizable.js"></script>
+    <script src="scripts/libs/jquery.2.1.3.min.js"></script>
+    <script src="scripts/libs/jquery-resizable.0.32.js"></script>
 
     <!-- Style -->
     <link rel="stylesheet" href="css/index.css">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/bootstrap.4.1.3.min.css" integrity="sha384-aEUs4qEDlFgeRWTVR2yylVz5CVeuSdpD3szZXeMJw2gqVCQiRzfY1gHahCUAm2gg" crossorigin="anonymous">
+    <script src="scripts/libs/bootstrap.4.1.0.min.js" integrity="sha384-Kd6Uj+VSHGh0PEQ8Fs56LxODxRzMqg3xNvXsZly3krJK8piiwyBz31GJ1rupYLI2" crossorigin="anonymous"></script>
 
 
     <!-- NEED THIS SOMEWHERE <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
