fix missing icons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Tooltips-->
     <script src="scripts/libs/d3-tip.0.09.1.min.js"></script>
     <!-- Popper.JS -->
-    <script src="/scripts/libs/popper.1.14.0.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="scripts/libs/popper.1.14.0.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- 2-panel layout : JQuery lib & resizable plugin -->
     <script src="scripts/libs/jquery.2.1.3.min.js"></script>
     <script src="scripts/libs/jquery-resizable.0.32.js"></script>
@@ -110,7 +110,7 @@
 
                       <svg id="selection-menu" width="150" height="20" viewBox="0 0 210 40">
 
-                        <image id="categories-btn" x="5" y="15" width="20" height="20" xlink:href="../css/icons/categories.svg" />
+                        <image id="categories-btn" x="5" y="15" width="20" height="20" xlink:href="css/icons/categories.svg" />
                         <text id="categories-txt" x="30" y="30">Event Categories</text>
 
                       </svg>
@@ -120,9 +120,9 @@
 
                           <rect id="control-menu-border" x="5" y="15" width="90" height="20" rx="5" ry="5"/>
 
-                          <image id="backward-btn" x="10" y="15" width="20" height="20" xlink:href="../css/icons/backward.svg" />
-                          <image id="play-btn" x="43" y="17.5" width="15" height="15" xlink:href="../css/icons/play.svg" />
-                          <image id="forward-btn" x="70" y="15" width="20" height="20" xlink:href="../css/icons/forward.svg" />
+                          <image id="backward-btn" x="10" y="15" width="20" height="20" xlink:href="css/icons/backward.svg" />
+                          <image id="play-btn" x="43" y="17.5" width="15" height="15" xlink:href="css/icons/play.svg" />
+                          <image id="forward-btn" x="70" y="15" width="20" height="20" xlink:href="css/icons/forward.svg" />
 
                           <text id="simulation-speed" x="43" y="10"></text>
 
