--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
     <script src="scripts/libs/jquery.2.1.3.min.js"></script>
     <script src="scripts/libs/jquery-resizable.0.32.js"></script>
 
-    <!-- Style -->
-    <link rel="stylesheet" href="css/index.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.4.1.3.min.css" integrity="sha384-aEUs4qEDlFgeRWTVR2yylVz5CVeuSdpD3szZXeMJw2gqVCQiRzfY1gHahCUAm2gg" crossorigin="anonymous">
     <script src="scripts/libs/bootstrap.4.1.0.min.js" integrity="sha384-Kd6Uj+VSHGh0PEQ8Fs56LxODxRzMqg3xNvXsZly3krJK8piiwyBz31GJ1rupYLI2" crossorigin="anonymous"></script>
+
+    <!-- Style -->
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/sidebar.css">
 
 
     <!-- NEED THIS SOMEWHERE <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
@@ -114,13 +117,44 @@
                     </g>
                   </svg>
 
-                  <svg id="control-menu" viewBox="0 0 140 40">
+                  <!--
+                  <svg id="control-menu" viewBox="5 5 100 30">
                     <rect id="control-menu-border" x="5" y="15" width="90" height="20" rx="5" ry="5"/>
                     <image id="backward-btn" x="10" y="15" width="20" height="20" xlink:href="css/icons/backward.svg" />
                     <image id="play-btn" x="43" y="17.5" width="15" height="15" xlink:href="css/icons/play.svg" />
                     <image id="forward-btn" x="70" y="15" width="20" height="20" xlink:href="css/icons/forward.svg" />
                     <text id="simulation-speed" x="43" y="10"></text>
                   </svg>
+                  -->
+
+                <div id="control-menu" style="width:130px">
+                    <p id="simulation-speed"
+                        style="height:30%;text-align:center;margin:0px 0px 0px 0px;line-height:40%;color:orange">
+                        1x
+                    </p>
+                    <div class="container-lay-horizontally container-distribute-horizontally"
+                        style="position:relative;
+                                width: 100%;
+                                height:70%;
+                                background-color:black;
+                                border: solid orange 2px;
+                                border-radius:8px">
+                        <button class="btn btn-icon" id="backward-btn"
+                                style="background-image:url('css/icons/backward.svg');
+                                        height:100%;">
+                        </button>
+                        <button class="btn btn-icon" id="play-btn"
+                                style="background-image:url('css/icons/play.svg');
+                                      height:95%;">
+                        </button>
+                        <button class="btn btn-icon" id="forward-btn"
+                                style="background-image:url('css/icons/forward.svg');
+                                      height:100%;">
+                        </button>
+                    </div>
+
+                </div>
+
 
                   <button class="btn btn-icon" id="btn-maximize"></button>
 
@@ -143,16 +177,17 @@
         <div class="splitter"></div>
 
         <div class="right-panel-split">
-            <div class="app-panel one-line-menu" id="menubar">
+            <div class="app-panel container-lay-horizontally" id="menubar">
                 <p>BREAKING NEWS</p>
+                <!--<img src="css/icons/logo.jpg" position="relative" left="15%" width="350px" height="60px" alt="logo">-->
                 <button class="btn btn-icon" id="btn-info"></button>
             </div>
             <div class="app-panel" id="sidebardiv">
             </div>
         </div>
+    </div>
 
-    <script type="text/javascript">
-    </script>
+
 
     <!-- Handles the resizable 2-panel layout -->
     <script type="text/javascript">
