Selection menu skeleton and behavior

--- a/index.html
+++ b/index.html
@@ -129,6 +129,50 @@
             </div>
 
             <div class="app-panel" id="settingsdiv">
+
+              <div class="quadclass-container">
+
+                <div class="quadclass-header">
+                  <input id="class-1" type="checkbox" checked="checked" value="Verbal Cooperation">
+                  <label>Verbal Cooperation</label>
+                </div>
+
+                <div class="event-codes-container">
+
+                  <ul>
+                    <li class="event-code">
+                      <input class="class-1" id="type-0" type="checkbox" checked="checked" value="">
+                      <label>Public statement</label>
+                    </li>
+                    <li class="event-code">
+                      <input class="class-1" id="type-1" type="checkbox" checked="checked" value="">
+                      <label>Appeal</label>
+                    </li>
+                    <li class="event-code">
+                      <input class="class-1" id="type-2" type="checkbox" checked="checked" value="">
+                      <label>Intent to cooperate</label>
+                    </li>
+                    <li class="event-code">
+                      <input class="class-1" id="type-3" type="checkbox" checked="checked" value="">
+                      <label>Consult</label>
+                    </li>
+                    <li class="event-code">
+                      <input class="class-1" id="type-4" type="checkbox" checked="checked" value="">
+                      <label>Diplomatic cooperation</label>
+                    </li>
+                  </ul>
+
+                </div>
+
+              </div>
+
+              <div class="quadclass-container"></div>
+
+              <div class="quadclass-container"></div>
+
+              <div class="quadclass-container"></div>
+
+              <!--
                 <div id="play-clock">[Click Play To start the visualization]</div>
                 <form action="">
                   <input id="c1" type="checkbox" name="1"> VERBAL_COOPERATION    </input>
@@ -136,8 +180,64 @@
                   <input id="c3" type="checkbox" name="3"> VERBAL_CONFLICT    </input>
                   <input id="c4" type="checkbox" name="4"> MATERIAL_CONFLICT    </input>
                 </form>
-            </div>
+              -->
 
+              <!--
+              <div class="quadclass-group" id="verbal-cooperation">
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Public statements</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Appeals</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Intents to collaborate</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Consultations</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Diplomatic cooperations</label>
+                  </div>
+              </div>
+            -->
+
+              <!--
+              <div class="quadclass-group" id="material-cooperation">
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Material cooperation</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Provide aid</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Yield</label>
+                  </div>
+
+                  <div class="event-code">
+                      <input type="checkbox"  checked="checked" name="Mapmashup" value="Jan" id="EJan">
+                      <label>Investigations</label>
+                  </div>
+
+              </div>
+            -->
+            </div>
         </div>
 
         <div class="splitter"></div>
