--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                                 background-color:black;
                                 border: solid orange 2px;
                                 border-radius:8px">
-                        <button class="btn btn-icon" id="backward-btn"
+                        <button class="btn-icon" id="backward-btn"
                                 style="background-image:url('css/icons/backward.svg');
                                         height:100%;">
                         </button>
-                        <button class="btn btn-icon" id="play-btn"
+                        <button class="btn-icon" id="play-btn"
                                 style="background-image:url('css/icons/play.svg');
                                       height:95%;">
                         </button>
-                        <button class="btn btn-icon" id="forward-btn"
+                        <button class="btn-icon" id="forward-btn"
                                 style="background-image:url('css/icons/forward.svg');
                                       height:100%;">
                         </button>
