--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="scripts/libs/d3-scale-chromatic.v1.min.js"></script>
     <!-- clone nodes -->
     <!-- <script src="scripts/libs/d3-clone.min.js"></script> -->
+    <!-- easing functions -->
+    <script src="scripts/libs/d3-ease.v1.min.js"></script>
     <!-- Tooltips-->
     <script src="scripts/libs/d3-tip.0.09.1.min.js"></script>
     <!-- Popper.JS -->
@@ -59,13 +61,15 @@
                           viewBox="220 20 560 350"
                           preserveAspectRatio="xMidYMid meet">
                       <g id="mapContent"></g>
-                      <!-- replaced by btn-maximize
-                      <svg id="selection-menu" width="150" height="20" viewBox="0 0 210 40">
-                        <image id="categories-btn" x="5" y="15" width="20" height="20" xlink:href="css/icons/categories.svg" />
-                        <text id="categories-txt" x="30" y="30">Event Categories</text>
-                      </svg>
-                        -->
                   </svg>
+
+                  <!--<svg    xmlns="http://www.w3.org/2000/svg"
+                          id="heatmapSvg"
+                          viewBox="220 20 560 350"
+                          preserveAspectRatio="xMidYMid meet">
+                      <g id="heatmapContent"></g>
+                  </svg>
+              -->
 
                   <svg id="digital-clock" viewBox="0 0 200 160">
 
