--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="css/bootstrap.4.1.3.min.css" integrity="sha384-aEUs4qEDlFgeRWTVR2yylVz5CVeuSdpD3szZXeMJw2gqVCQiRzfY1gHahCUAm2gg" crossorigin="anonymous">
     <script src="scripts/libs/bootstrap.4.1.0.min.js" integrity="sha384-Kd6Uj+VSHGh0PEQ8Fs56LxODxRzMqg3xNvXsZly3krJK8piiwyBz31GJ1rupYLI2" crossorigin="anonymous"></script>
 
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
+
     <!-- Style -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/map.css">
@@ -299,6 +302,56 @@
                 <button class="btn btn-icon" id="btn-info"></button>
             </div>
             <div class="app-panel" id="sidebardiv">
+            </div>
+            <div class="app-panel" id="informationdiv">
+
+              <div class="info-section">
+                <div class="info-paragraph">
+                  Welcome to Breaking News, an interactive visualization built around online news reports data.
+                  The goal of this website is to explore the evolution and distribution of important events around
+                  the globe over the course of a day, and understand which are the major online news sources that
+                  cover those events, and what are the geographical focus areas of those outlets.
+                </div>
+              </div>
+
+              <div class="info-section">
+                <div class="info-paragraph">
+                  By clicking on the play button, you can start your journey through the events of November 5th,
+                  2018 and see them appear on the world map. You can pause the simulation at any time and explore
+                  the events currently displayed on the map, or you can speed up and slow down the simulation
+                  according to your desired pace.
+                </div>
+
+                <div class="info-paragraph">
+                  To visualize more information about a specific event, hover it with your cursor on the map.
+                  By clicking on the event, a new page opens with the first known full report covering it.
+                </div>
+
+                <div class="info-paragraph">
+                  The underlying data originates from the widely known GDELT 2.0 dataset, which is a constantly
+                  and automatically updated collection of event data, where each event is categorized based on a
+                  precise coding scheme. You can select a subset of event categories to display in the map by
+                  checking the corresponding checkboxes. There are 4 major event categories, each one with
+                  multiple subcategories.
+                </div>
+              </div>
+
+              <div class="info-section">
+                <div class="info-paragraph">
+                  During the simulation, a new panel will take the place of this information section. Its purpose
+                  will be to display the 5 sources that have published the most reports about the events of that
+                  day. This top-5 is dinamycally updated as the hours go by. For each source, the cumulative number
+                  of written articles is showcased, along with a timeseries reporting the number of articles
+                  published during each 15 minutes update.
+                </div>
+
+                <div class="info-paragraph">
+                  Clicking on a source object will switch the map view from the event-based perspective to a source
+                  oriented one, where the countries in which the source was active the most are highlighted.
+                </div>
+              </div>
+
+
             </div>
         </div>
     </div>
