--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       </div>
                   </div>
 
-                  <button class="btn btn-icon" id="btn-maximize"></button>
+                  <button class="btn-icon" id="btn-maximize"></button>
 
                 </div>
             </div>
@@ -342,7 +342,7 @@
             <div class="app-panel container-lay-horizontally" id="menubar">
                 <span>BREAKING NEWS</span>
                 <!--<img src="css/icons/logo.jpg" position="relative" left="15%" width="350px" height="60px" alt="logo">-->
-                <button class="btn btn-icon" id="btn-info"></button>
+                <button class="btn-icon" id="btn-info"></button>
             </div>
             <div class="app-panel" id="sidebardiv">
             </div>
