--- a/index.html
+++ b/index.html
@@ -399,15 +399,15 @@
 
                   <div class="info-paragraph">
                     During the simulation, a new panel will take the place of this information section. Its purpose
-                    will be to display the 5 sources that have published the most reports about the events of that
-                    day. This top-5 is dinamycally updated as the hours go by. For each source, the cumulative number
+                    will be to display the sources that have published the most reports about the events of that
+                    day. This list is dinamycally updated as the hours go by. For each source, the cumulative number
                     of written articles is showcased, along with a timeseries reporting the number of articles
                     published during each 15 minutes update.
                   </div>
 
                   <div class="info-paragraph">
-                    Clicking on a source object will switch the map view from the event-based perspective to a source
-                    oriented one, where the countries in which the source was active the most are highlighted.
+                    Selecting a part of the source timeseries will switch the map view from the event-based perspective to a source
+                    oriented one, where the countries in which the source was active the most during the selected period are highlighted.
                   </div>
                 </div>
 
